--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -148,7 +148,7 @@ pre {
   border-radius: 5px;
 }
 
-a {
+a:not(.social-icon) {
   color: #d1d1d1;
   font-style: italic;
   font-weight: 700;
@@ -160,8 +160,8 @@ a {
   border-bottom: 2px solid #d1d1d1;
 }
 
-a:hover {
+/* a:hover {
   color: #d1d1d1;
   text-decoration: none;
   border-bottom: 4px solid #d1d1d1;
-}
+} */
