--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,8 +8,8 @@
             </a>
         </div>
         <div class="col-2 col-md-6  text-center">
-            {{ partial "svg/sun.svg" . }}
-            {{ partial "svg/moon.svg" . }}
+            <!-- {{ partial "svg/sun.svg" . }}
+            {{ partial "svg/moon.svg" . }} -->
         </div>    
     </div>
 </div>
