--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 article-wrapper mt-5 py-2">
-            <h2 class="h4 article-title"><a href="{{.URL}}">{{.Title}}</a></h2>
+            <h2 class="h4 post-title"><a href="{{.URL}}">{{.Title}}</a></h2>
             {{ partial "date" . }}
             {{ partial "turtles" . }}
             {{ partial "readtime" . }}
