--- a/layouts/shortcodes/parawrap.html
+++ b/layouts/shortcodes/parawrap.html
@@ -1,6 +1,6 @@
 <div class="container-fluid ">
     <div class="row no-gutters ">
-        <div class="col-12 py-2">
+        <div class="col-12 py-2 para">
             {{.Inner}}
         </div>
     </div>
