--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="container-fluid pt-5">
+<div class="container-fluid pt-5 px-5">
     <div class="row no-gutters">
         <h1 class="article-title h3 col-12">{{.Title}}</h1>
         <div class="col-6">
