--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <!--footer-->
-<footer class="mt-5">
+<footer class="mt-5 px-4">
     <div class="container-fluid">
         <div id="footer-social-wrapper" class="row">
             <a href="#/" class="social-icon">
