--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <!--blog title-->
-<div class="container-fluid pt-5">
+<div class="container-fluid pt-5 px-5">
     <div class="row no-gutters">
         <div class="col-10 col-md-6">
             <a href="https://blueturtle.blog" style="text-decoration: none; border: none;">
