--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,7 +9,7 @@
                 {{ partial "svg/twitter.svg" . }}
             </a>
             <a href="#/" class="social-icon">
-                {{ partial "svg/pinterest.svg" . }}
+                {{ partial "svg/linkedin.svg" . }}
             </a>
         </div>
     </div>
