--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -1,14 +1,20 @@
 <!--articles-->
-<div class="container-fluid">
+<div class="container-fluid article-wrapper mt-5 py-2">
     <div class="row">
-        <div class="col-12 article-wrapper mt-5 py-2">
+        <div class="col-12">
             <h2 class="h4 post-title"><a href="{{.URL}}">{{.Title}}</a></h2>
-            {{ partial "date" . }}
-            {{ partial "turtles" . }}
-            {{ partial "readtime" . }}
-            
-            <span class="small ml-3 tag">#A11y #JS</span>
-            <p class="article-brief mb-0">An accessibility issue being solved.</p>
         </div>
+            <div class="col-12 text-secondary">
+
+                {{ partial "date" . }}
+                {{ partial "turtles" . }}
+                {{ partial "readtime" . }}
+                <span class="small">{{ partial "tags" . }}</span>
+            </div>
+            <div class="col-12">
+
+                <p class="article-brief mb-0 pt-1">An accessibility issue being solved.</p>
+            </div>
+        
     </div>
 </div>        
