--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,7 +15,7 @@
       <title>blue turtle</title>
     </head>
     <body>
-        <div class="container-fluid px-0 wrapper">
+        <div class="container-fluid wrapper px-0">
             {{ partial "header" .}}
             {{ block "main" .}}
             {{end}}
