--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,6 +3,13 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <meta name="description" content="Web Development Blog">
+      <meta name="keywords" content="HTML,CSS,JavaScript,React,Bootstrap,Material design,Software, Front-end, nodejs">
+      <meta name="author" content="Islam Sayed">
+      <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+      <!-- <link rel="manifest" href="/site.webmanifest"> -->
       <link
         rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -12,7 +19,7 @@
       <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Source+Sans+Pro:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i,700,700i" rel="stylesheet">
       <link rel="stylesheet" href="/css/styles.css"/>
-      <title>blue turtle</title>
+      <title>Blue Turtle | Web Development Blog By Islam Sayed</title>
     </head>
     <body>
         <div class="container-fluid wrapper px-0">
