--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,13 +2,13 @@
 <footer class="mt-5 px-4">
     <div class="container-fluid">
         <div id="footer-social-wrapper" class="row">
-            <a href="#/" class="social-icon">
+            <a href="https://www.facebook.com/islam.sayed8" class="social-icon">
                 {{ partial "svg/facebook.svg" . }}
             </a>
-            <a href="#/" class="social-icon">
+            <a href="https://twitter.com/islam_sayed8" class="social-icon">
                 {{ partial "svg/twitter.svg" . }}
             </a>
-            <a href="#/" class="social-icon">
+            <a href="https://www.linkedin.com/in/islam-sayed-ibrahim" class="social-icon">
                 {{ partial "svg/linkedin.svg" . }}
             </a>
         </div>
