--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,6 +6,8 @@
       <meta name="description" content="Web Development Blog">
       <meta name="keywords" content="HTML,CSS,JavaScript,React,Bootstrap,Material design,Software, Front-end, nodejs">
       <meta name="author" content="Islam Sayed">
+      <meta name="theme-color" content="#222">
+      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
       <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
