--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,7 +23,8 @@
       <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Source+Sans+Pro:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i,700,700i" rel="stylesheet">
       <link rel="stylesheet" href="/css/styles.css"/>
-      <title>Blue Turtle | Web Development Blog By Islam Sayed</title>
+      <!-- <title>Blue Turtle | Web Development Blog By Islam Sayed</title> -->
+      {{ partial "pagetitle" . }}
     </head>
     <body>
         <div class="container-fluid wrapper px-0">
