--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -13,7 +13,7 @@
             </div>
             <div class="col-12">
 
-                <p class="article-brief mb-0 pt-1">An accessibility issue being solved.</p>
+               {{ partial "description" . }}
             </div>
         
     </div>
