--- a/layouts/partials/date.html
+++ b/layouts/partials/date.html
@@ -1,1 +1,1 @@
-<time datetime="2018-8-10" class="small">{{ dateFormat "January 2, 2006" .Date }}</time>
+<time datetime="2018-8-10" class="small text-danger">{{ dateFormat "January 2, 2006" .Date }}</time>
