--- a/layouts/partials/tags.html
+++ b/layouts/partials/tags.html
@@ -1,5 +1,5 @@
     <ul class="tags">
         {{ range .Params.tags }}
-            <li class="pr-3"><a class="text-secondary" href="{{ "/tags/" | relURL }}{{ . | urlize }}">#{{ . }}</a></li>
+            <li class="pr-3"><a class="text-danger" href="{{ "/tags/" | relURL }}{{ . | urlize }}">#{{ . }}</a></li>
         {{ end }}
     </ul>
