--- a/layouts/partials/pagetitle.html
+++ b/layouts/partials/pagetitle.html
@@ -1,5 +1,5 @@
 <title>
-    {{if  .Title }}
+    {{if  .Params.Title }}
         {{ .Title }} | Blue Turtle Blog
     {{else}}
         {{ "Blue Turtle | Web Development Blog By Islam Sayed" }}
