--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,16 +1,23 @@
 <!--footer-->
-<footer class="mt-5 px-4">
-    <div class="container-fluid">
+<div class="container-fluid ">
+  <div class="row no-gutters">
+    <footer class="mt-5">
+      <div class="container-fluid">
         <div id="footer-social-wrapper" class="row">
-            <a href="https://www.facebook.com/islam.sayed8" class="social-icon">
-                {{ partial "svg/facebook.svg" . }}
-            </a>
-            <a href="https://twitter.com/islam_sayed8" class="social-icon">
-                {{ partial "svg/twitter.svg" . }}
-            </a>
-            <a href="https://www.linkedin.com/in/islam-sayed-ibrahim" class="social-icon">
-                {{ partial "svg/linkedin.svg" . }}
-            </a>
+          <a href="https://www.facebook.com/islam.sayed8" class="social-icon">
+            {{ partial "svg/facebook.svg" . }}
+          </a>
+          <a href="https://twitter.com/islam_sayed8" class="social-icon">
+            {{ partial "svg/twitter.svg" . }}
+          </a>
+          <a
+            href="https://www.linkedin.com/in/islam-sayed-ibrahim"
+            class="social-icon"
+          >
+            {{ partial "svg/linkedin.svg" . }}
+          </a>
         </div>
-    </div>
-</footer>
+      </div>
+    </footer>
+  </div>
+</div>
