--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,8 @@
 {{ define "main"}}
 {{ partial "about" . }}
 {{ range .Pages }}
-    {{ partial "post" . }}
+    {{if not (eq .Title "Subscribe") }}
+        {{ partial "post" . }}
+    {{end}}
 {{end}}
 {{end}}
