style: footer copyright left align

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
     <footer class="mt-5 col-12">
       <div class="container-fluid">
         <div id="footer-social-wrapper" class="row">
-          <div class="col-6">
+          <div class="col-12">
             <a href="https://www.facebook.com/islam.sayed8" class="social-icon">
               {{ partial "svg/facebook.svg" . }}
             </a>
@@ -17,9 +17,7 @@
             >
               {{ partial "svg/linkedin.svg" . }}
             </a>
-          </div>
-          <div class="col-6">
-            <p class="my-0 text-right">©2019 Copyright Islam Sayed.</p>
+            <p class="my-0 text-left">©2019 Copyright Islam Sayed.</p>
           </div>
         </div>
       </div>
