--- a/layouts/partials/coverimg.html
+++ b/layouts/partials/coverimg.html
@@ -1,1 +1,1 @@
-<img src={{ .Params.cover }} class="img-fluid" alt="cover image">
+<img src={{ .Params.cover }} class="img-fluid" alt="cover image" />
