--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,6 +14,9 @@ body {
   background: #222;
   border-left: 3px solid #d1d1d1;
 }
+.article-wrapper:hover {
+  background: #383838;
+}
 .article-title {
   /* font-family: "Raleway", sans-serif; */
   font-family: 'Josefin Sans', sans-serif;
@@ -187,3 +190,7 @@ a:hover:not(.social-icon) {
   font-style: italic;
 }
 
+input,
+textarea {
+  background: #e4e4e4 !important;
+}
