--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,6 +24,12 @@
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i,700,700i" rel="stylesheet">
       <link rel="stylesheet" href="/css/styles.css"/>
       <!-- <title>Blue Turtle | Web Development Blog By Islam Sayed</title> -->
+      <meta property="og:title" content={{ .Params.title }} />
+      <meta property="og:site_name" content="blueturtle.blog" />
+      <meta property="og:type" content="article" />
+      <meta property="og:url" content="https://blueturtle.blog/news/now-use-material-ui-icons-with-super-ease/" />
+      <meta property="og:image" content={{ .Params.cover }} />
+      <meta property="og:description " content={{ .Params.description }} />
       {{ partial "pagetitle" . }}
     </head>
     <body>
