--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,8 +1,8 @@
 body {
   background: #221;
   color: #d1d1d1; 
-  /* font-family: "Montserrat", sans-serif; */
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Raleway", sans-serif; 
+  /* font-family: 'Josefin Sans', sans-serif; */
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
@@ -17,14 +17,14 @@ body {
 
 .article-title {
   /* font-family: "Raleway", sans-serif; */
-  font-family: 'Josefin Sans', sans-serif;
+  /* font-family: 'Josefin Sans', sans-serif; */
   font-weight: 700;
   /* letter-spacing: 1px; */
   position: relative;
   font-size: 1.8rem;
 }
 .post-title {
-  font-family: 'Josefin Sans', sans-serif;
+  /* font-family: 'Josefin Sans', sans-serif; */
   font-weight: 600;
   /* letter-spacing: 1px; */
   position: relative;
